bug fix: changed @media visibility for .a to 1300

--- a/src/site/Nav.module.css
+++ b/src/site/Nav.module.css
@@ -136,7 +136,7 @@ Taken 2012 by J. Bedient
 
  } 
 
- @media(max-width: 1250px){
+ @media(max-width: 1300px){
   .container .a{
     display: none;
   }
